# DBManager

./: .gitignore  README.md  pyproject.toml
src/: config.py  database_utf8.ini  dbmanager.py  main.py  utils.py
