[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["our ame <pastaeva98@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 119

[tool.isort]
line_length = 119

[tool.black]
line-length = 119

[tool.mypy]
exclude = '.venv'
